Add console helpers

--- a/config/hirb.yml
+++ b/config/hirb.yml
@@ -9,5 +9,5 @@
         - lft
         - rgt
         - tree_depth
-        - created_at
-        - updated_at
+        - created
+        - updated
